# VtkSharp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
src/bindings/VtkSharp.Native/: CMakeLists.txt  CMakePresets.json  vtksharp.modules.generated.cmake
src/bindings/VtkSharp.Native/include/: VtkSharpExternalOpenGlRenderContext.h  vtksharp_api.h
src/bindings/VtkSharp.Native/src/VtkSharpExtension/: VtkSharpExternalOpenGlRenderContext.cpp
src/bindings/VtkSharp.Native/src/vtkCommonColor/: vtkNamedColors_export_gen.cpp
src/bindings/VtkSharp.Native/src/vtkCommonComputationalGeometry/: vtkParametricEnneper_export_gen.cpp  vtkParametricFunction_export_gen.cpp
src/bindings/VtkSharp.Native/src/vtkCommonCore/: vtkAbstractArray_export_gen.cpp  vtkCollection_export_gen.cpp  vtkDoubleArray_export_gen.cpp  (+5 more)
src/bindings/VtkSharp.Wpf.Native/: CMakeLists.txt
src/bindings/VtkSharp.Wpf.Native/src/: D3DImageRenderTarget.cpp  VtkOpenGlD3DImageRender.cpp  VtkOpenGlD3DImageRender.h  WglContext.cpp  WglContext.h
src/native/: CMakeLists.txt  CMakePresets.json  vtksharp.modules.generated.cmake
src/native/include/: vtksharp_api.h
src/native/src/vtkCommonColor/: vtkNamedColors_export_gen.cpp
src/native/src/vtkCommonCore/: vtkAbstractArray_export_gen.cpp  vtkDataArray_export_gen.cpp  vtkEventData_export_gen.cpp  vtkIdList_export_gen.cpp  vtkMinimalStandardRandomSequence_export_gen.cpp  vtkObjectBase_export.cpp  vtkObject_export.cpp  vtkPoints_export_gen.cpp  vtkRandomSequence_export_gen.cpp  vtkUnsignedCharArray_export_gen.cpp  vtkWindow_export_gen.cpp
src/native/src/vtkCommonDataModel/: vtkAbstractCellArray_export_gen.cpp  vtkCartesianGrid_export_gen.cpp  vtkCellArray_export_gen.cpp  vtkCell_export_gen.cpp  vtkDataObject_export_gen.cpp  vtkDataSetAttributes_export_gen.cpp  vtkDataSet_export_gen.cpp  vtkImageData_export_gen.cpp  vtkLine_export_gen.cpp  vtkPointSet_export_gen.cpp  vtkPolyData_export_gen.cpp  vtkPolyLine_export_gen.cpp  vtkPolygon_export_gen.cpp  vtkQuad_export_gen.cpp
src/native/src/vtkCommonExecutionModel/: vtkAlgorithmOutput_export_gen.cpp  vtkAlgorithm_export_gen.cpp  vtkImageAlgorithm_export_gen.cpp  vtkPolyDataAlgorithm_export_gen.cpp  vtkThreadedImageAlgorithm_export_gen.cpp
src/native/src/vtkCommonTransforms/: vtkAbstractTransform_export_gen.cpp  vtkHomogeneousTransform_export_gen.cpp  vtkLinearTransform_export_gen.cpp  vtkTransform_export_gen.cpp
src/native/src/vtkFiltersCore/: vtkAppendPolyData_export_gen.cpp  vtkCellCenters_export_gen.cpp  vtkDelaunay2D_export_gen.cpp  vtkExtractEdges_export_gen.cpp  vtkGenerateIds_export_gen.cpp  vtkGlyph3D_export_gen.cpp  vtkTubeFilter_export_gen.cpp
src/native/src/vtkFiltersGeneral/: vtkTransformPolyDataFilter_export_gen.cpp
src/native/src/vtkFiltersModeling/: vtkLinearExtrusionFilter_export_gen.cpp
src/native/src/vtkFiltersSources/: vtkArrowSource_export_gen.cpp  vtkConeSource_export_gen.cpp  vtkCubeSource_export_gen.cpp  vtkCylinderSource_export_gen.cpp  vtkLineSource_export_gen.cpp  vtkParametricFunctionSource_export_gen.cpp  vtkPlaneSource_export_gen.cpp  vtkSphereSource_export_gen.cpp
src/native/src/vtkIOImage/: vtkImageWriter_export_gen.cpp  vtkJPEGWriter_export_gen.cpp  vtkPNGWriter_export_gen.cpp
src/native/src/vtkImagingMath/: vtkImageMathematics_export_gen.cpp
src/native/src/vtkInteractionStyle/: vtkInteractorStyleRubberBand2D_export_gen.cpp  vtkInteractorStyleRubberBandPick_export_gen.cpp  vtkInteractorStyleSwitch_export_gen.cpp  vtkInteractorStyleTerrain_export_gen.cpp  vtkInteractorStyleTrackballCamera_export_gen.cpp
src/native/src/vtkInteractionWidgets/: vtkOrientationMarkerWidget_export_gen.cpp
src/native/src/vtkRenderingAnnotation/: vtkAxesActor_export_gen.cpp  vtkCaptionActor2D_export_gen.cpp  vtkLegendScaleActor_export_gen.cpp
src/native/src/vtkRenderingCore/: vtkAbstractPicker_export_gen.cpp  vtkAbstractPropPicker_export_gen.cpp  vtkActor2D_export_gen.cpp  vtkActorCollection_export_gen.cpp  vtkActor_export_gen.cpp  vtkAssemblyPath_export_gen.cpp  vtkCamera_export_gen.cpp  vtkCoordinate_export_gen.cpp  vtkImageActor_export_gen.cpp  vtkImageSlice_export_gen.cpp  vtkInteractorObserver_export_gen.cpp  vtkInteractorStyle_export_gen.cpp  vtkLight_export_gen.cpp  vtkMapper_export_gen.cpp  vtkPolyDataMapper2D_export_gen.cpp  vtkPolyDataMapper_export_gen.cpp  vtkProp3D_export_gen.cpp  vtkPropCollection_export_gen.cpp  vtkPropPicker_export.cpp  vtkPropPicker_export_gen.cpp  vtkProp_export_gen.cpp  vtkProperty2D_export_gen.cpp  vtkProperty_export_gen.cpp  vtkRenderWindowInteractor_export.cpp  vtkRenderWindowInteractor_export_gen.cpp  vtkRenderWindowInteractor_input_export.cpp  vtkRenderWindow_cursor_export.cpp  vtkRenderWindow_export_gen.cpp  vtkRenderer_export_gen.cpp  vtkSelectVisiblePoints_export_gen.cpp  vtkTDxInteractorStyle_export_gen.cpp  vtkTextActor_export_gen.cpp  vtkTextMapper_export_gen.cpp  vtkTextProperty_export_gen.cpp  vtkViewport_export_gen.cpp  vtkWindowToImageFilter_export_gen.cpp
src/native/src/vtkRenderingLabel/: vtkLabeledDataMapper_export_gen.cpp
src/native/src/vtkRenderingOpenGL2/: vtkOpenGLRenderWindow_export_gen.cpp  vtkWin32OpenGLRenderWindow_export_gen.cpp
src/native/src/vtkRenderingUI/: vtkGenericRenderWindowInteractor_export.cpp  vtkWin32RenderWindowInteractor_export_gen.cpp
src/native/src/wpf/: D3DImageRenderTarget.cpp  D3DImageRenderTarget.h  OpenGlFramebuffer.cpp  OpenGlFramebuffer.h  OpenGlFramebufferApi.cpp  OpenGlFramebufferApi.h  VtkOpenGlD3DImageRender.cpp  VtkOpenGlD3DImageRender.h  VtkOpenGlD3DImageRender_export.cpp  VtkWpfCpuRenderBridge.cpp  VtkWpfD3DImageOpenGLRenderTarget.cpp  VtkWpfD3DImageOpenGLRenderTarget.h  VtkWpfD3DImageOpenGLRenderTarget_export.cpp  VtkWpfD3DImageRenderBridge.cpp  VtkWpfOpenGLD3DImageProbeBridge.cpp  VtkWpfOpenGLD3DImageRenderBridge.cpp  VtkWpfOpenGLD3DImageRenderBridge_export.cpp  WglContext.cpp  WglContext.h  WglDxInterop.cpp  WglDxInterop.h  WglDxInteropApi.cpp  WglDxInteropApi.h
tools/dump_colors/: CMakeLists.txt  dump_colors.cpp
(+596 files in other folders)
